--- a/app/src/main/res/layout/fragment_summoner_info.xml
+++ b/app/src/main/res/layout/fragment_summoner_info.xml
@@ -63,31 +63,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_summonerName"
         tools:text="67" />
 
-    <TextView
-        android:id="@+id/textView_serverNameLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="4dp"
-        android:text="Server:"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintLeft_toRightOf="@+id/imageView_summonerIcon"
-        app:layout_constraintRight_toLeftOf="@+id/textView_ServerName"
-        app:layout_constraintTop_toBottomOf="@+id/textView_summonerLevelLabel" />
-
-
-    <TextView
-        android:id="@+id/textView_ServerName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintLeft_toRightOf="@+id/textView_serverNameLabel"
+    <ProgressBar
+        android:id="@+id/progressbar"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_summonerLevelLabel"
-        tools:text="Russia" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/button_changeSummoner"
