--- a/app/src/main/res/layout/fragment_summoner_info.xml
+++ b/app/src/main/res/layout/fragment_summoner_info.xml
@@ -63,6 +63,31 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_summonerName"
         tools:text="67" />
 
+    <TextView
+        android:id="@+id/textView_chestCountLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Granted chest count in season:"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toRightOf="@+id/imageView_summonerIcon"
+        app:layout_constraintRight_toLeftOf="@+id/textView_summonerLevel"
+        app:layout_constraintTop_toBottomOf="@+id/textView_summonerLevel" />
+
+    <TextView
+        android:id="@+id/textView_chestCount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintLeft_toRightOf="@+id/textView_chestCountLabel"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_summonerLevel"
+        tools:text="67" />
+
     <ProgressBar
         android:id="@+id/progressbar"
         app:layout_constraintLeft_toLeftOf="parent"
