--- a/app/src/main/res/layout/fragment_summoner_info.xml
+++ b/app/src/main/res/layout/fragment_summoner_info.xml
@@ -89,7 +89,7 @@
         tools:text="67" />
 
     <ProgressBar
-        android:id="@+id/progressbar"
+        android:id="@+id/progressbar_summoner_info"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
