--- a/app/src/main/res/layout/fragment_summoner_info.xml
+++ b/app/src/main/res/layout/fragment_summoner_info.xml
@@ -19,7 +19,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:text="Summoner name:"
+        android:text="@string/info_screen_summoner_name_label"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@+id/imageView_summonerIcon"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:text="Summoner level:"
+        android:text="@string/info_screen_summoner_level_label"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@+id/imageView_summonerIcon"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        android:text="Granted chest count in season:"
+        android:text="@string/info_screen_granted_chest_label"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@+id/imageView_summonerIcon"
@@ -90,18 +90,18 @@
 
     <ProgressBar
         android:id="@+id/progressbar_summoner_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_changeSummoner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Change summoner"
+        android:text="@string/info_screen_button_change_summoner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
